--- a/frontend/pets/src/app/app.component.css
+++ b/frontend/pets/src/app/app.component.css
@@ -1,29 +1,87 @@
-:host{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background: linear-gradient(to right, #333333, #f84018);
-    padding: 0;
-    font-family: 'montserrat';
+:host {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  place-items: center;
+  padding: 20px;
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 0px;
+  }
+
+  .container {
+    border-radius: 10px;
+    border-radius: 24px;
+    background: linear-gradient(145deg, #232425, #2a2b2c);
+    box-shadow:  29px 29px 43px #181819,
+                 -29px -29px 43px #363839;
+    padding: 20px;
+    width: 500px;
+    
+    form {
+      display: flex;
+      justify-content: space-between;
+
+      div{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10px;
+        margin-right: 5px;
   
-    h3{
-      color: rgb(253, 253, 253);
+        label {
+          color: #fff;
+          font-size: .6rem;
+          font-weight: 500;
+          margin-bottom: 3px;
+        }
+  
+        input {
+          border: 1px solid #ffffffbd;
+          border-radius: 3px;
+          outline: none;
+          padding: 3px;
+          font-size: .7rem;
+        }
+  
+      }
     }
-  
-    button{
-      min-width: 200px;
-      padding: 8px 10px;
-      border-radius: 5px;
-      border: none;
-      background-color: #141414;
-      color: #f84018;
+
+
+    button {
+      border: 0;
+      border-radius: 4px;
       cursor: pointer;
-      margin-top: 5px;
+      background-color: #5B9A8B;
+      padding: 5px 10px;
+      font-weight: 700;
+      width: 100%;
+      color: #272829;
+
+      &:hover {
+        background-color: #FFF6E0;
+      }
     }
   }
+
+  table {
+    margin-top: 40px;
+    width: 100%;
+    text-align: left;
+
+    th {
+      color: #61677A;
+      font-size: .7rem;
+    }
+
+    th, td {
+      padding: 6px 0px;
+      border-top: 1px solid ;
+    }
+
+    span {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+}
